After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 787510 - goa: fix a memory leak
goa: fix a memory leak
Status: RESOLVED FIXED
Product: gnome-initial-setup
Classification: Applications
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: GNOME Initial Setup maintainer(s)
GNOME Initial Setup maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2017-09-10 17:05 UTC by Cosimo Cecchi
Modified: 2017-10-26 07:58 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
goa: fix a memory leak (1.56 KB, patch)
2017-09-10 17:05 UTC, Cosimo Cecchi
committed Details | Review
goa: Fix a GIcon leak (1010 bytes, patch)
2017-10-25 16:16 UTC, Rui Matos
committed Details | Review

Description Cosimo Cecchi 2017-09-10 17:05:44 UTC
See patch
Comment 1 Cosimo Cecchi 2017-09-10 17:05:46 UTC
Created attachment 359469 [details] [review]
goa: fix a memory leak

goa_provider_get_provider_name() returns a new string.
Comment 2 Rui Matos 2017-10-25 15:40:46 UTC
Review of attachment 359469 [details] [review]:

looks good but it seems the provider icon is also leaked, can you amend that in and push? thanks
Comment 3 Rui Matos 2017-10-25 16:16:07 UTC
Created attachment 362276 [details] [review]
goa: Fix a GIcon leak

goa_provider_get_provider_icon() transfers the returned reference.

--

I'll just push this on top of your patch
Comment 4 Cosimo Cecchi 2017-10-26 07:58:13 UTC
Attachment 359469 [details] pushed as db63ec6 - goa: fix a memory leak
Attachment 362276 [details] pushed as 526b4fc - goa: Fix a GIcon leak

Pushed both to master, thanks.