goa: fix a memory leak

goa_provider_get_provider_name() returns a new string.

https://bugzilla.gnome.org/show_bug.cgi?id=787510